--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -4,9 +4,8 @@
 
     <body>
         <div id="wrapper">
-            <!-- prettier-ignore -->
-            <%- include('../partials/header) %> 
-      <%- include('../partials/navigation) %>
+            <%- include('../partials/header') %> <%-
+            include('../partials/navigation') %>
 
             <main><%- body %></main>
 
