--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,5 +3,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%- title %> | CSE 340 App</title>
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/base.css" media="screen" />
+    <link rel="stylesheet" href="/css/large.css" media="screen" />
+    <link rel="shortcut icon" href="/images/site/favicon-32x32.png" type="image/x-icon">
+    <meta http-equiv="refresh" content="5">
 </head>
