--- a/public/css/large.css
+++ b/public/css/large.css
@@ -5,8 +5,23 @@
 //  88888P'  888  888  888  
 */
 @media (min-width: 640px) {
+    #wrapper {
+        overflow: hidden;
+
+        width: 90vw;
+        margin-left: auto;
+        margin-right: auto;
+
+        border: 10px solid var(--higlight-color);
+        border-radius: 10px;
+    }
+
     #top-header {
         flex-direction: row;
+    }
+
+    nav a {
+        padding: 1rem;
     }
 }
 
@@ -20,14 +35,4 @@
 // 888  888  888   "Y88888  
 */
 @media (min-width: 768px) {
-    #wrapper {
-        overflow: hidden;
-
-        width: 90vw;
-        margin-left: auto;
-        margin-right: auto;
-
-        border: 10px solid var(--higlight-color);
-        border-radius: 10px;
-    }
 }
