--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,13 @@
-<h1>Daniel Andrés Concha Parra</h1>
-<h2>This is an update for the learning activity of deploying updates to render</h2>
+<section class="home-hero">
+    <h1>Welcome to CSE Motors!</h1>
+    <div class="vehicle-info">
+        <p>DMC Delorean</p>
+        <p>3 Cup holders</p>
+        <p>Superman doors</p>
+        <p>Fuzzy dice!</p>
+        <a href="#"> Own Today </a>
+    </div>
+    <div class="vehicle-img">
+        <img src="/images/vehicles/delorean.jpg" alt="Delorean Image" />
+    </div>
+</section>
