--- a/public/css/base.css
+++ b/public/css/base.css
@@ -12,6 +12,14 @@
     --bg-color: #ffffff;
     --higlight-color: #01b0d3;
     --neutral-color: #242332;
+
+    --font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+        sans-serif;
+    --font-bold: 500;
+
+    --z-base: 1;
+    --z-on-top: calc(var(--z-base) + 1);
 }
 
 /*  .d8888b.                                                    888  
@@ -34,9 +42,7 @@ body {
     padding: 0;
     margin: 0;
     background-image: url("/images/site/checkerboard.jpg");
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-        sans-serif;
+    font-family: var(--font-family);
 }
 
 #wrapper {
@@ -83,15 +89,6 @@ body {
 // 888   Y8888  888  888   Y8bd8P   
 // 888    Y888  "Y888888    Y88P    
 */
-/*
-<nav>
-    <a href="#">Home</a>
-    <a href="#">Custom</a>
-    <a href="#">Sedan</a>
-    <a href="#">SUV</a>
-    <a href="#">Truck</a>
-</nav>
-*/
 nav {
     margin-top: 1rem;
     display: flex;
@@ -106,4 +103,85 @@ nav a {
     padding: 0.5rem;
     color: white;
     text-decoration: none;
+}
+
+/* 888    888                                     
+// 888    888                                     
+// 888    888                                     
+// 8888888888   .d88b.   88888b.d88b.    .d88b.   
+// 888    888  d88""88b  888 "888 "88b  d8P  Y8b  
+// 888    888  888  888  888  888  888  88888888  
+// 888    888  Y88..88P  888  888  888  Y8b.      
+// 888    888   "Y88P"   888  888  888   "Y8888   
+*/
+/*
+<section class="home-hero">
+    <h1>Welcome to CSE Motors!</h1>
+    <div class="vehicle-info">
+        <p>DMC Delorean</p>
+        <p>3 Cup holders</p>
+        <p>Superman doors</p>
+        <p>Fuzzy dice!</p>
+        <a href="#">
+            Own Today
+        </a>
+    </div>
+    <div class="vehicle-img">
+        <img src="/images/vehicles/delorean.jpg" alt="Delorean Image" />
+    </div>
+</section>
+*/
+.home-hero {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.home-hero h1 {
+    grid-column: 1/4;
+}
+
+.home-hero .vehicle-info {
+    z-index: var(--z-on-top);
+
+    font-size: 1.3rem;
+    padding: 1rem;
+
+    grid-column: 1/3;
+    grid-row: 2/3;
+
+    background-color: rgba(255, 255, 255, 0.7);
+    color: var(--higlight-color);
+
+    font-weight: 600;
+}
+
+.home-hero .vehicle-info * {
+    margin: 0;
+}
+
+.home-hero .vehicle-info :first-child {
+    font-size: 1.2em;
+}
+
+.home-hero .vehicle-info a {
+    display: inline-block;
+    margin-top: 1rem;
+    padding: 1rem;
+
+    background-color: var(--higlight-color);
+    color: var(--neutral-color);
+
+    text-decoration: none;
+}
+
+.home-hero .vehicle-img {
+    margin-left: auto;
+    margin-right: auto;
+
+    grid-column: 1/4;
+    grid-row: 2/3;
+}
+
+.home-hero .vehicle-img img {
+    max-width: 100%;
 }
