--- a/public/css/large.css
+++ b/public/css/large.css
@@ -11,6 +11,8 @@
         width: 90vw;
         margin-left: auto;
         margin-right: auto;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
 
         border: 10px solid var(--higlight-color);
         border-radius: 10px;
@@ -22,6 +24,10 @@
 
     nav a {
         padding: 1rem;
+    }
+
+    .home-hero .vehicle-info {
+        grid-column: 1/2;
     }
 }
 
