--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,6 +5,12 @@
     <title><%- title %> | CSE 340 App</title>
     <link rel="stylesheet" href="/css/base.css" media="screen" />
     <link rel="stylesheet" href="/css/large.css" media="screen" />
-    <link rel="shortcut icon" href="/images/site/favicon-32x32.png" type="image/x-icon">
-    <meta http-equiv="refresh" content="5">
+    <link
+        rel="shortcut icon"
+        href="/images/site/favicon-32x32.png"
+        type="image/x-icon"
+    />
+    <% if (process.env.NODE_ENV !== "production") { %>
+    <meta http-equiv="refresh" content="5" />
+    <% } %>
 </head>
