--- a/public/css/base.css
+++ b/public/css/base.css
@@ -115,22 +115,7 @@ nav a {
 // 888    888   "Y88P"   888  888  888   "Y8888   
 */
 /*
-<section class="home-hero">
-    <h1>Welcome to CSE Motors!</h1>
-    <div class="vehicle-info">
-        <p>DMC Delorean</p>
-        <p>3 Cup holders</p>
-        <p>Superman doors</p>
-        <p>Fuzzy dice!</p>
-        <a href="#">
-            Own Today
-        </a>
-    </div>
-    <div class="vehicle-img">
-        <img src="/images/vehicles/delorean.jpg" alt="Delorean Image" />
-    </div>
-</section>
-*/
+/* ------------------------------- Home Hero ------------------------------- */
 .home-hero {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -184,4 +169,100 @@ nav a {
 
 .home-hero .vehicle-img img {
     max-width: 100%;
+}
+
+/* ------------------------------- Home Upgrades and Reviews ------------------------------- */
+/*
+<div class="home-content">
+    <section class="vehicle-upgrades">
+        <h2>Delorean Upgrades</h2>
+        <div>
+            <div>
+                <img src="/images/upgrades/flux-cap.png" alt="Flux Capacitor" />
+            </div>
+            <p>Flux Capacitor</p>
+        </div>
+        <div>
+            <div>
+                <img src="/images/upgrades/flame.jpg" alt="Flame Decals" />
+            </div>
+            <p>Flame Decals</p>
+        </div>
+        <div>
+            <div>
+                <img
+                    src="/images/upgrades/bumper_sticker.jpg"
+                    alt="Bumper Stickers"
+                />
+            </div>
+            <p>Bumper Stickers</p>
+        </div>
+        <div>
+            <div>
+                <img src="/images/upgrades/hub-cap.jpg" alt="Hub Caps" />
+            </div>
+            <p>Hub Caps</p>
+        </div>
+    </section>
+    <section class="vehicle-reviews">
+        <h2>Delorean Reviews</h2>
+        <ul>
+            <li>"So fast it's almost like traveling in time." (4/5)</li>
+            <li>"Collest ride on the road." (4/5)</li>
+            <li>"I'm feeling McFly!" (5/5)</li>
+            <li>"The most futuristic ride of our day." (4.5/5)</li>
+            <li>"80's livin and I love it!" (5/5)</li>
+        </ul>
+    </section>
+</div>
+*/
+
+.home-content {
+    display: flex;
+    flex-direction: column-reverse;
+
+    gap: 1rem;
+}
+
+.vehicle-upgrades,
+.vehicle-reviews {
+    flex-grow: 1;
+}
+
+.vehicle-upgrades {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+
+    gap: 0.5rem;
+}
+
+.vehicle-upgrades h2 {
+    grid-column: 1/3;
+}
+
+.vehicle-upgrades > div {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.vehicle-upgrades div:has(> img) {
+    height: 100%;
+    padding: 0.5rem;
+    text-align: center;
+
+    background-color: var(--higlight-color);
+    border: 1px solid var(--neutral-color);
+}
+
+.vehicle-upgrades > div a {
+    text-align: center;
+}
+
+.vehicle-reviews ul {
+    font-size: 1.2em;
+}
+
+.vehicle-reviews ul li:not(:last-child) {
+    margin-bottom: 0.5rem;
 }
