--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,3 +11,45 @@
         <img src="/images/vehicles/delorean.jpg" alt="Delorean Image" />
     </div>
 </section>
+<div class="home-content">
+    <section class="vehicle-upgrades">
+        <h2>Delorean Upgrades</h2>
+        <div>
+            <div>
+                <img src="/images/upgrades/flux-cap.png" alt="Flux Capacitor" />
+            </div>
+            <a href="#">Flux Capacitor</a>
+        </div>
+        <div>
+            <div>
+                <img src="/images/upgrades/flame.jpg" alt="Flame Decals" />
+            </div>
+            <a href="#">Flame Decals</a>
+        </div>
+        <div>
+            <div>
+                <img
+                    src="/images/upgrades/bumper_sticker.jpg"
+                    alt="Bumper Stickers"
+                />
+            </div>
+            <a href="#">Bumper Stickers</a>
+        </div>
+        <div>
+            <div>
+                <img src="/images/upgrades/hub-cap.jpg" alt="Hub Caps" />
+            </div>
+            <a href="#">Hub Caps</a>
+        </div>
+    </section>
+    <section class="vehicle-reviews">
+        <h2>DMC Delorean Reviews</h2>
+        <ul>
+            <li>"So fast it's almost like traveling in time." (4/5)</li>
+            <li>"Collest ride on the road." (4/5)</li>
+            <li>"I'm feeling McFly!" (5/5)</li>
+            <li>"The most futuristic ride of our day." (4.5/5)</li>
+            <li>"80's livin and I love it!" (5/5)</li>
+        </ul>
+    </section>
+</div>
