head.ejs - Add constant to turn off meta reloading tag if needed while developing

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -10,7 +10,7 @@
         href="/images/site/favicon-32x32.png"
         type="image/x-icon"
     />
-    <% if (process.env.NODE_ENV !== "production") { %>
+    <% if (process.env.NODE_ENV !== "production" && true) { %>
     <meta http-equiv="refresh" content="5" />
     <% } %>
 </head>
