--- a/public/css/base.css
+++ b/public/css/base.css
@@ -93,7 +93,7 @@ nav {
     margin-top: 1rem;
     display: flex;
 
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 
     background-color: var(--neutral-color);
@@ -114,7 +114,6 @@ nav a {
 // 888    888  Y88..88P  888  888  888  Y8b.      
 // 888    888   "Y88P"   888  888  888   "Y8888   
 */
-/*
 /* ------------------------------- Home Hero ------------------------------- */
 .home-hero {
     display: grid;
@@ -172,50 +171,6 @@ nav a {
 }
 
 /* ------------------------------- Home Upgrades and Reviews ------------------------------- */
-/*
-<div class="home-content">
-    <section class="vehicle-upgrades">
-        <h2>Delorean Upgrades</h2>
-        <div>
-            <div>
-                <img src="/images/upgrades/flux-cap.png" alt="Flux Capacitor" />
-            </div>
-            <p>Flux Capacitor</p>
-        </div>
-        <div>
-            <div>
-                <img src="/images/upgrades/flame.jpg" alt="Flame Decals" />
-            </div>
-            <p>Flame Decals</p>
-        </div>
-        <div>
-            <div>
-                <img
-                    src="/images/upgrades/bumper_sticker.jpg"
-                    alt="Bumper Stickers"
-                />
-            </div>
-            <p>Bumper Stickers</p>
-        </div>
-        <div>
-            <div>
-                <img src="/images/upgrades/hub-cap.jpg" alt="Hub Caps" />
-            </div>
-            <p>Hub Caps</p>
-        </div>
-    </section>
-    <section class="vehicle-reviews">
-        <h2>Delorean Reviews</h2>
-        <ul>
-            <li>"So fast it's almost like traveling in time." (4/5)</li>
-            <li>"Collest ride on the road." (4/5)</li>
-            <li>"I'm feeling McFly!" (5/5)</li>
-            <li>"The most futuristic ride of our day." (4.5/5)</li>
-            <li>"80's livin and I love it!" (5/5)</li>
-        </ul>
-    </section>
-</div>
-*/
 
 .home-content {
     display: flex;
