--- a/public/css/base.css
+++ b/public/css/base.css
@@ -221,3 +221,16 @@ nav a {
 .vehicle-reviews ul li:not(:last-child) {
     margin-bottom: 0.5rem;
 }
+
+/* 8888888888                      888                        
+// 888                             888                        
+// 888                             888                        
+// 8888888      .d88b.    .d88b.   888888   .d88b.   888d888  
+// 888         d88""88b  d88""88b  888     d8P  Y8b  888P"    
+// 888         888  888  888  888  888     88888888  888      
+// 888         Y88..88P  Y88..88P  Y88b.   Y8b.      888      
+// 888          "Y88P"    "Y88P"    "Y888   "Y8888   888      
+*/
+footer {
+    padding-top: 1rem;
+}
