--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,14 @@
 <section class="home-hero">
     <h1>Welcome to CSE Motors!</h1>
     <div class="vehicle-info">
-        <p>DMC Delorean</p>
+        <h2>DMC Delorean</h2>
         <p>3 Cup holders</p>
         <p>Superman doors</p>
         <p>Fuzzy dice!</p>
         <a href="#"> Own Today </a>
     </div>
     <div class="vehicle-img">
-        <img src="/images/vehicles/delorean.jpg" alt="Delorean Image" />
+        <img src="/images/vehicles/delorean.jpg" alt="Illustration of a DMC Delorean from Back to the Future" />
     </div>
 </section>
 <div class="home-content">
