--- a/public/css/large.css
+++ b/public/css/large.css
@@ -1,3 +1,15 @@
+/* 888  888  .d8888b   
+// 'Y8bd8P'  88K       
+//   X88K    "Y8888b.  
+// .d8""8b.       X88  
+// 888  888   88888P'  
+*/
+@media (min-width: 370px) {
+    nav {
+        flex-direction: row;
+    }
+}
+
 /* .d8888b   88888b.d88b.   
 // 88K       888 "888 "88b  
 // "Y8888b.  888  888  888  
