--- a/public/css/base.css
+++ b/public/css/base.css
@@ -303,6 +303,45 @@ nav a {
     font-size: 1.2em;
 }
 
+/* 8888888888                                       
+// 888                                              
+// 888                                              
+// 8888888     888d888  888d888   .d88b.   888d888  
+// 888         888P"    888P"    d88""88b  888P"    
+// 888         888      888      888  888  888      
+// 888         888      888      Y88..88P  888      
+// 8888888888  888      888       "Y88P"   888      
+//
+// 8888888b.                                 
+// 888   Y88b                                
+// 888    888                                
+// 888   d88P   8888b.    .d88b.    .d88b.   
+// 8888888P"       "88b  d88P"88b  d8P  Y8b  
+// 888         .d888888  888  888  88888888  
+// 888         888  888  Y88b 888  Y8b.      
+// 888         "Y888888   "Y88888   "Y8888   
+//                            888            
+//                       Y8b d88P            
+//                        "Y88P"
+*/
+.error-page-container {
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+    
+    font-size: 1.3rem;
+}
+
+.error-page-container > div {
+    flex-grow: 1;
+}
+
+#error-page-img {
+    display: block;
+    max-width: 400px;
+    width: 100%;
+}
+
 /* 8888888888                      888                        
 // 888                             888                        
 // 888                             888                        
