--- a/public/css/large.css
+++ b/public/css/large.css
@@ -60,4 +60,8 @@
     .home-hero .vehicle-info {
         margin-left: 2rem;
     }
+
+    .vehicle-details-container{
+        flex-direction: row;
+    }
 }
