--- a/views/errors/error.ejs
+++ b/views/errors/error.ejs
@@ -7,13 +7,13 @@
 <div class="error-page-container">
     <div>
         <%= message %>
-        <p>Have a cat as an apology gift:</p>
+        <p>Here's a cat picture as an apology gift:</p>
     </div>
 
     <div>
         <img
             id="error-page-img"
-            src="https://cataas.com/cat?width=400"
+            src="https://cataas.com/cat/cute?width=400"
             alt="Photograph of a Random Cat"
         />
     </div>
