--- a/public/css/base.css
+++ b/public/css/base.css
@@ -468,6 +468,85 @@ nav a {
     width: 100%;
 }
 
+/* 8888888b.                       d8b            888                        888     d8b                      
+// 888   Y88b                      Y8P            888                        888     Y8P                      
+// 888    888                                     888                        888                              
+// 888   d88P   .d88b.    .d88b.   888  .d8888b   888888  888d888   8888b.   888888  888   .d88b.   88888b.   
+// 8888888P"   d8P  Y8b  d88P"88b  888  88K       888     888P"        "88b  888     888  d88""88b  888 "88b  
+// 888 T88b    88888888  888  888  888  "Y8888b.  888     888      .d888888  888     888  888  888  888  888  
+// 888  T88b   Y8b.      Y88b 888  888       X88  Y88b.   888      888  888  Y88b.   888  Y88..88P  888  888  
+// 888   T88b   "Y8888    "Y88888  888   88888P'   "Y888  888      "Y888888   "Y888  888   "Y88P"   888  888  
+//                            888                                                                             
+//                       Y8b d88P                                                                             
+//                        "Y88P"
+// 8888888b.                                 
+// 888   Y88b                                
+// 888    888                                
+// 888   d88P   8888b.    .d88b.    .d88b.   
+// 8888888P"       "88b  d88P"88b  d8P  Y8b  
+// 888         .d888888  888  888  88888888  
+// 888         888  888  Y88b 888  Y8b.      
+// 888         "Y888888   "Y88888   "Y8888   
+//                            888            
+//                       Y8b d88P            
+//                        "Y88P"
+*/
+.registration-form {
+    max-width: min(300px, 100%);
+    margin-top: 1rem;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1rem;
+
+    background-color: var(--neutral-color);
+    color: white;
+}
+
+.registration-form h1 {
+    margin-top: 0;
+}
+
+.registration-form form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.registration-form form input {
+    margin-top: 0.5rem;
+}
+
+.registration-form form input,
+.registration-form form button[type="submit"] {
+    padding: 0.5rem 0.6rem;
+    border-radius: 10px;
+}
+
+.registration-form a {
+    color: white;
+}
+
+.registration-form form label {
+    font-size: 1.3rem;
+}
+
+.registration-form form label,
+.registration-form form input,
+.registration-form form button[type="submit"] {
+    display: block;
+    width: 100%;
+}
+
+.registration-form p {
+    margin-bottom: 0;
+}
+
+.registration-form ul {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 1.3rem;
+}
+
 /* 8888888888                      888                        
 // 888                             888                        
 // 888                             888                        
