--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -17,5 +17,5 @@
         </label>
         <button type="submit">Login</button>
     </form>
-    <p>No account? <a href="/account/create">Sign-up</a></p>
+    <p>No account? <a href="/account/registration">Sign-up</a></p>
 </section>
