W04 - LA - Change Action URL for Login and registration forms

--- a/views/account/registration.ejs
+++ b/views/account/registration.ejs
@@ -2,7 +2,7 @@
 
 <section class="registration-form">
     <h1><%= title %></h1>
-    <form action="/" method="post">
+    <form action="/account/registration" method="post">
         <label>
             *First name:
             <input
