--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -2,7 +2,7 @@
 
 <section class="login-form">
     <h1><%= title %></h1>
-    <form action="/" method="post">
+    <form action="/account/login" method="post">
         <label>
             Email:
             <input type="email" name="account_email" id="account_email" />
