--- a/views/account/registration.ejs
+++ b/views/account/registration.ejs
@@ -2,6 +2,7 @@
 
 <section class="registration-form">
     <h1><%= title %></h1>
+    <p>All fields are required.</p>
     <form action="/account/registration" method="post">
         <label>
             *First name:
