--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -5,7 +5,12 @@
     <form action="/account/login" method="post">
         <label>
             Email:
-            <input type="email" name="account_email" id="account_email" />
+            <input
+                type="email"
+                name="account_email"
+                id="account_email"
+                required
+            />
         </label>
         <label>
             Password:
@@ -13,8 +18,19 @@
                 type="password"
                 name="account_password"
                 id="account_password"
+                required
+                pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$"
             />
         </label>
+        <div>
+            <p>Password Requirements:</p>
+            <ul>
+                <li>Must be 12 characters in length, minimum</li>
+                <li>Must contain at least 1 capital letter</li>
+                <li>Must contain at least 1 number</li>
+                <li>Must contain at least 1 special character</li>
+            </ul>
+        </div>
         <button type="submit">Login</button>
     </form>
     <p>No account? <a href="/account/registration">Sign-up</a></p>
