--- a/views/account/registration.ejs
+++ b/views/account/registration.ejs
@@ -38,6 +38,7 @@
                 name="account_password"
                 id="account_password"
                 required
+                pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$"
             />
         </label>
         <div>
