--- a/views/account/registration.ejs
+++ b/views/account/registration.ejs
@@ -1,5 +1,13 @@
 <%- messages() %>
 
+<% if (errors) { %>
+<ul class="notice">
+    <% errors.array().forEach(error => { %>
+    <li><%= error.msg %></li>
+    <% }) %>
+</ul>
+<% } %>
+
 <section class="registration-form">
     <h1><%= title %></h1>
     <p>All fields are required.</p>
