W04 - Assignment Task 2 - View Delivery

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -572,6 +572,83 @@ input:required:valid {
     background-color: #acf3a0;
 }
 
+/* 888b    888                                 .d8888b.   888                                
+// 8888b   888                                d88P  Y88b  888                                
+// 88888b  888                                888    888  888                                
+// 888Y88b 888   .d88b.   888  888  888       888         888   8888b.   .d8888b   .d8888b   
+// 888 Y88b888  d8P  Y8b  888  888  888       888         888      "88b  88K       88K       
+// 888  Y88888  88888888  888  888  888       888    888  888  .d888888  "Y8888b.  "Y8888b.  
+// 888   Y8888  Y8b.      Y88b 888 d88P       Y88b  d88P  888  888  888       X88       X88  
+// 888    Y888   "Y8888    "Y8888888P"         "Y8888P"   888  "Y888888   88888P'   88888P'  
+//
+// 8888888b.                                 
+// 888   Y88b                                
+// 888    888                                
+// 888   d88P   8888b.    .d88b.    .d88b.   
+// 8888888P"       "88b  d88P"88b  d8P  Y8b  
+// 888         .d888888  888  888  88888888  
+// 888         888  888  Y88b 888  Y8b.      
+// 888         "Y888888   "Y88888   "Y8888   
+//                            888            
+//                       Y8b d88P            
+//                        "Y88P"
+*/
+.new-classification-form {
+    max-width: min(300px, 100%);
+    margin-top: 1rem;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1rem;
+
+    background-color: var(--neutral-color);
+    color: white;
+}
+
+.new-classification-form h1 {
+    margin-top: 0;
+}
+
+.new-classification-form form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.new-classification-form form input {
+    margin-top: 0.5rem;
+}
+
+.new-classification-form form input,
+.new-classification-form form button[type="submit"] {
+    padding: 0.5rem 0.6rem;
+    border-radius: 10px;
+}
+
+.new-classification-form a {
+    color: white;
+}
+
+.new-classification-form form label {
+    font-size: 1.3rem;
+}
+
+.new-classification-form form label,
+.new-classification-form form input,
+.new-classification-form form button[type="submit"] {
+    display: block;
+    width: 100%;
+}
+
+.new-classification-form p {
+    margin-bottom: 0;
+}
+
+.new-classification-form ul {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 1.3rem;
+}
+
 /* 8888888888                      888                        
 // 888                             888                        
 // 888                             888                        
