--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -3,6 +3,6 @@
     <h1><%= title %></h1>
     <% } else { res.redirect('/') } %>
     <%- messages() %>
-    <p><a href="#">Add New Classification</a></p>
+    <p><a href="/inv/add-classification">Add New Classification</a></p>
     <p><a href="#">Add New Vehicle</a></p>
 </section>
