--- a/views/account/registration.ejs
+++ b/views/account/registration.ejs
@@ -1,7 +1,7 @@
 <%- messages() %>
 
 <% if (errors) { %>
-<ul class="notice">
+<ul class="error">
     <% errors.array().forEach(error => { %>
     <li><%= error.msg %></li>
     <% }) %>
