--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -4,5 +4,5 @@
     <% } else { res.redirect('/') } %>
     <%- messages() %>
     <p><a href="/inv/add-classification">Add New Classification</a></p>
-    <p><a href="#">Add New Vehicle</a></p>
+    <p><a href="/inv/add-inventory">Add New Vehicle</a></p>
 </section>
