W04 - Team Activity - Login Form Validation and Stickiness

--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -9,6 +9,7 @@
                 type="email"
                 name="account_email"
                 id="account_email"
+                value="<%- locals.account_email %>"
                 required
             />
         </label>
