--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -6,3 +6,15 @@
     <p><a href="/inv/add-classification">Add New Classification</a></p>
     <p><a href="/inv/add-inventory">Add New Vehicle</a></p>
 </section>
+<section>
+    <h2>Manage Inventory</h2>
+    <p>
+        Select a classification from the list to see the items belonging to the
+        classification.
+    </p>
+    <%- classificationSelect %>
+    <table id="inventoryDisplay"></table>
+
+    <noscript>Javascript must be enabled to use this page.</noscript>
+</section>
+<script src="../../js/inventory.js"></script>
