--- a/public/css/base.css
+++ b/public/css/base.css
@@ -740,6 +740,37 @@ table#inventoryDisplay td:last-child {
     border-right: 1px solid var(--neutral-color);
 }
 
+/*        d8888                                                    888     
+//       d88888                                                    888     
+//      d88P888                                                    888     
+//     d88P 888   .d8888b   .d8888b   .d88b.   888  888  88888b.   888888  
+//    d88P  888  d88P"     d88P"     d88""88b  888  888  888 "88b  888     
+//   d88P   888  888       888       888  888  888  888  888  888  888     
+//  d8888888888  Y88b.     Y88b.     Y88..88P  Y88b 888  888  888  Y88b.   
+// d88P     888   "Y8888P   "Y8888P   "Y88P"    "Y88888  888  888   "Y888  
+//                                                                         
+// 8888888b.                                 
+// 888   Y88b                                
+// 888    888                                
+// 888   d88P   8888b.    .d88b.    .d88b.   
+// 8888888P"       "88b  d88P"88b  d8P  Y8b  
+// 888         .d888888  888  888  88888888  
+// 888         888  888  Y88b 888  Y8b.      
+// 888         "Y888888   "Y88888   "Y8888   
+//                            888            
+//                       Y8b d88P            
+//                        "Y88P"
+*/
+.account-page h2,
+.account-page h3 {
+    margin-bottom: 0.2em;
+}
+
+.account-page p {
+    margin-top: 0.2rem;
+    margin-bottom: 0.2rem;
+}
+
 /* 8888888888                      888                        
 // 888                             888                        
 // 888                             888                        
