--- a/views/account/account.ejs
+++ b/views/account/account.ejs
@@ -5,7 +5,7 @@
     <p>You're logged in</p>
     <p><a href="/account/update/<%- locals.accountData.account_id %>">Update Account Information</a></p>
 
-    <% if (locals.isEmployee) { %>
+    <% if (isEmployee) { %>
     <h3>Inventory Management</h3>
     <p><a href="/inv/">Go to inventory Management Page</a></p>
     <% } %>
