--- a/views/account/account.ejs
+++ b/views/account/account.ejs
@@ -1,6 +1,7 @@
 <%- messages() %>
 
 <section class="account-page">
+    <h1>Account Management</h1>
     <h2>Welcome <%- locals.accountData.account_firstname %></h2>
     <p>You're logged in</p>
     <p><a href="/account/update/<%- locals.accountData.account_id %>">Update Account Information</a></p>
