W05 - Project - Add comment list in item view

--- a/views/inventory/item.ejs
+++ b/views/inventory/item.ejs
@@ -9,7 +9,7 @@
 <%- details %>
 
 <!-- prettier-ignore -->
-<%#- commentList %>
+<%- commentList %>
 
 <% if (locals.loggedin == 1) { %>
 <section class="add-comment-form">
