--- a/views/inventory/item.ejs
+++ b/views/inventory/item.ejs
@@ -22,9 +22,15 @@
             >
         </label>
         <input type="hidden" name="inv_id" value="<%- locals.inv_id %>" />
-        <input type="hidden" name="account_id" value="<%- locals.account_id %>" />
+        <input
+            type="hidden"
+            name="account_id"
+            value="<%- locals.account_id %>"
+        />
 
         <button type="submit">Add Comment</button>
     </form>
 </section>
 <% } %>
+
+<script src="/js/item.js"></script>
