--- a/public/css/base.css
+++ b/public/css/base.css
@@ -466,6 +466,25 @@ section.add-comment-form textarea {
     padding: 0.5rem 0.6rem;
 }
 
+article.comment section form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    max-width: min(300px, 100%);
+}
+
+article.comment section form label {
+    display: flex;
+    flex-direction: column;
+    max-width: min(300px, 100%);
+}
+
+article.comment section form textarea {
+    margin-top: 0.5rem;
+    font-family: var(--font-family);
+    padding: 0.5rem 0.6rem;
+}
+
 /* 888                           d8b            
 // 888                           Y8P            
 // 888                                          
